--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -317,10 +317,16 @@ h6
 .params th, .props th { border-right: 1px solid #aaa; }
 .params thead .last, .props thead .last { border-right: 1px solid #ddd; }
 
-.params td.description > p
+.params td.description > p:first-child
 {
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.params td.description > p:last-child
+{
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .disabled {
