--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -1,4 +1,5 @@
 <?js
+    var data = obj;
     var self = this;
     docs.forEach(function(doc, i) {
 ?>
@@ -37,7 +38,7 @@
             <div class="description"><?js= doc.description ?></div>
         <?js } ?>
         
-        <?js= self.partial('details.tmpl', doc) ?>
+        <?js= self.partial('details.tmpl', { doc: doc, opts: data.opts }) ?>
         
         <?js if (doc.examples && doc.examples.length) { ?>
             <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
