--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -1,17 +1,18 @@
 <?js
 var data = obj;
+var doc = data.doc || {};
 var self = this;
 var defaultObjectClass = '';
 
 // Check if the default value is an object, if so, apply code highlighting
-if (data.defaultvalue && data.defaultvaluetype === 'object') {
-    data.defaultvalue = "<pre class=\"prettyprint\"><code>" + data.defaultvalue + "</code></pre>";
+if (doc.defaultvalue && doc.defaultvaluetype === 'object') {
+    doc.defaultvalue = "<pre class=\"prettyprint\"><code>" + doc.defaultvalue + "</code></pre>";
     defaultObjectClass = ' class="object-value"';
 }
 ?>
 <dl class="details">
     <?js
-        var properties = data.properties;
+        var properties = doc.properties;
         if (properties && properties.length && properties.forEach) { 
     ?>
         
@@ -21,85 +22,85 @@ if (data.defaultvalue && data.defaultvaluetype === 'object') {
         
     <?js } ?>
         
-    <?js if (data.version) {?>
+    <?js if (doc.version) {?>
     <dt class="tag-version">Version:</dt>
-    <dd class="tag-version"><ul class="dummy"><li><?js= version ?></li></ul></dd>
+    <dd class="tag-version"><ul class="dummy"><li><?js= doc.version ?></li></ul></dd>
     <?js } ?>
     
-    <?js if (data.since) {?>
+    <?js if (doc.since) {?>
     <dt class="tag-since">Since:</dt>
-    <dd class="tag-since"><ul class="dummy"><li><?js= since ?></dd>
+    <dd class="tag-since"><ul class="dummy"><li><?js= doc.since ?></dd>
     <?js } ?>
 
-    <?js if (data.inherited && data.inherits) { ?>
+    <?js if (doc.inherited && doc.inherits) { ?>
     <dt class="inherited-from">Inherited From:</dt>
     <dd class="inherited-from"><ul class="dummy"><li>
-        <?js= this.linkto(data.inherits, this.htmlsafe(data.inherits)) ?>
+        <?js= this.linkto(doc.inherits, this.htmlsafe(doc.inherits)) ?>
     </li></dd>
     <?js } ?>
     
-    <?js if (data.deprecated) { ?>
+    <?js if (doc.deprecated) { ?>
         <dt class="important tag-deprecated">Deprecated:</dt><?js
-            if (data.deprecated === true) { ?><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd><?js }
-            else { ?><dd><ul class="dummy"><li><?js= data.deprecated ?></li><ul></dd><?js }
+            if (doc.deprecated === true) { ?><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd><?js }
+            else { ?><dd><ul class="dummy"><li><?js= doc.deprecated ?></li><ul></dd><?js }
         ?>
     <?js } ?>
     
-    <?js if (data.author && author.length) {?>
+    <?js if (doc.author && doc.author.length) {?>
     <dt class="tag-author">Author:</dt>
     <dd class="tag-author">
-        <ul><?js author.forEach(function(a) { ?>
+        <ul><?js doc.author.forEach(function(a) { ?>
             <li><?js= self.resolveAuthorLinks(a) ?></li>
         <?js }); ?></ul>
     </dd>
     <?js } ?>
     
-    <?js if (data.copyright) {?>
+    <?js if (doc.copyright) {?>
     <dt class="tag-copyright">Copyright:</dt>
-    <dd class="tag-copyright"><ul class="dummy"><li><?js= copyright ?></li></ul></dd>
+    <dd class="tag-copyright"><ul class="dummy"><li><?js= doc.copyright ?></li></ul></dd>
     <?js } ?>
     
-    <?js if (data.license) {?>
+    <?js if (doc.license) {?>
     <dt class="tag-license">License:</dt>
-    <dd class="tag-license"><ul class="dummy"><li><?js= license ?></li></ul></dd>
+    <dd class="tag-license"><ul class="dummy"><li><?js= doc.license ?></li></ul></dd>
     <?js } ?>
     
-    <?js if (data.defaultvalue) {?>
+    <?js if (doc.defaultvalue) {?>
     <dt class="tag-default">Default Value:</dt>
     <dd class="tag-default"><ul class="dummy">
-            <li<?js= defaultObjectClass ?>><?js= data.defaultvalue ?></li>
+            <li<?js= defaultObjectClass ?>><?js= doc.defaultvalue ?></li>
         </ul></dd>
     <?js } ?>
     
-    <?js if (data.meta) {?>
+    <?js if (doc.meta && data.opts.outputSourceFiles) {?>
     <dt class="tag-source">Source:</dt>
     <dd class="tag-source"><ul class="dummy"><li>
-        <?js= self.linkto(meta.shortpath) ?>, <?js= self.linkto(meta.shortpath, 'line ' + meta.lineno, null, 'line' + meta.lineno) ?>
+        <?js= self.linkto(doc.meta.shortpath) ?>, <?js= self.linkto(doc.meta.shortpath, 'line ' + doc.meta.lineno, null, 'line' + doc.meta.lineno) ?>
     </li></ul></dd>
     <?js } ?>
     
-    <?js if (data.tutorials && tutorials.length) {?>
+    <?js if (doc.tutorials && doc.tutorials.length) {?>
     <dt class="tag-tutorial">Tutorials:</dt>
     <dd class="tag-tutorial">
-        <ul><?js tutorials.forEach(function(t) { ?>
+        <ul><?js doc.tutorials.forEach(function(t) { ?>
             <li><?js= self.tutoriallink(t) ?></li>
         <?js }); ?></ul>
     </dd>
     <?js } ?>
     
-    <?js if (data.see && see.length) {?>
+    <?js if (doc.see && doc.see.length) {?>
     <dt class="tag-see">See:</dt>
     <dd class="tag-see">
-        <ul><?js see.forEach(function(s) { ?>
+        <ul><?js doc.see.forEach(function(s) { ?>
             <li><?js= self.linkto(s) ?></li>
         <?js }); ?></ul>
     </dd>
     <?js } ?>
     
-    <?js if (data.todo && todo.length) {?>
+    <?js if (doc.todo && doc.todo.length) {?>
     <dt class="tag-todo">To Do:</dt>
     <dd class="tag-todo">
-        <ul><?js todo.forEach(function(t) { ?>
+        <ul><?js doc.todo.forEach(function(t) { ?>
             <li><?js= t ?></li>
         <?js }); ?></ul>
     </dd>
